index.css
@import url("https://fonts.googleapis.com/css2?family=Archivo+Black&family=Great+Vibes&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Italiana&family=Italianno&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Parisienne&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: sans-serif;
}

/* Theme 1: Cyberpunk (Neon) */
:root {
  --color-bg: #2a2356;
  --color-button: #2a2356;
  --color-primary-hover: #ff0099;
  --nav-bar: #586ae2;
  --color-text: #34edf3;
  --color-text-accent: #ff007f;
  --main-font: "IBM Plex Mono", monospace;
  --secondary-font: "raleway", sans-serif;
  --primary-color: #ff007f;
  --secondary-color: #34edf3;
  --effect: #34edf3;
  --angle-transparency: transparent 70%;
  --angle-transparency-hover: transparent 70%;
  --transition: 1s;
  --nav-links: polygon(15% 0, 100% 0, 85% 100%, 0 100%);
  --border-nav: 0;
}
/* Theme 3: Modern*/
[data-theme="modern"] {
  --color-bg: #f8fafc;
  --color-button: #2563eb;
  --color-primary-hover: #1d4ed8;
  --nav-bar: #c7c7c7;
  --color-text: #0f172a;
  --color-text-accent: #64748b;
  --main-font: "Montserrat", sans-serif;
  --secondary-font: "raleway", sans-serif;
  --primary-color: #2563eb;
  --secondary-color: #2563eb;
  --effect: #2563eb;
  --angle-transparency: 100%;
  --angle-transparency-hover: 100%;
  --transition: 0.5s;
  --nav-links: 0;
  --border-nav: 1.5rem;
}

/* Theme 3: Forest (Nature) */
[data-theme="forest"] {
  --primary-clr: #2d5a27;
  --secondary-clr: #92ba92;
  --nav-bar: #1b1b1b;
  --text-color: #1a2e1a;
  --main-font: "great vibes", monospace;
  --primary-color: red;
  --secondary-color: blue;
}

/* Theme 4: Sunset (Warm) */
[data-theme="sunset"] {
  --primary-clr: #ff5f6d;
  --secondary-clr: #ffc371;
  --nav-bar: #1b1b1b;
  --text-color: #4a1e1e;
  --main-font: "IBM Plex Mono", monospace;
  --primary-color: red;
  --secondary-color: blue;
}

body {
  background: var(--color-bg);
  display: flex;
  flex-direction: column;
  transition:
    background-color 0.4s ease,
    color 0.4s ease;
}

.stop-start {
  stop-color: var(--primary-color);
  transition: stop-color 0.4s ease;
}

.stop-end {
  stop-color: var(--secondary-color);
  transition: stop-color 0.4s ease;
}
.nav {
  position: sticky;
  top: 0;
  background-color: var(--nav-bar);
  margin: 0 85px 0 85px;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
  width: auto;
  height: 60px;
  display: flex;
  align-items: center;
  justify-content: space-around;
  z-index: 2;
}
.nav .links {
  display: flex;
  align-items: center;
  flex-direction: row;
  gap: clamp(0.0625rem, 3vw, 2.5rem);
  list-style-type: none;
  padding: 24px;
  justify-content: space-around;
}
.nav .links li a {
  text-decoration: none;
  list-style-type: none;
  color: var(--color-text);
  font-family: var(--main-font);
  text-transform: capitalize;
  white-space: nowrap;
  font-size: clamp(0.675rem, 2vw, 1rem);
  transition: 0.5s ease;
  border-radius: var(--border-nav);
  padding: 5px 15px;
  clip-path: var(--nav-links);
}
.nav .links li a:hover {
  background-color: var(--color-primary-hover);
  color: var(--color-bg);
}
.nav .icons a {
  text-decoration: none;
}
.nav .icons svg {
  fill: var(--color-text);
  width: 30px;
  height: 30px;
  transition: 0.5s ease;
}

.nav .hamburger {
  display: none;
  flex-direction: column;
  width: 30px;
  height: 30px;
  gap: 5px;
  cursor: pointer;
}
.nav .hamburger span {
  width: 30px;
  height: 3px;
  background-color: var(--color-text);
  transition: 0.5s ease;
}
.dropdown {
  position: relative;
  display: inline-block;
}
.dropbtn {
  background-color: var(--nav-bar);
  color: var(--color-text);
  padding: 5px 16px;
  border-width: 1px;
  border-color: var(--color-text);
  cursor: pointer;
  border-radius: 0.5rem;
  padding: 8px 20px 8px 20px;
  border-style: solid;
}
.dropdown .dropdown-content {
  display: none;
  flex-direction: column;
  align-items: center;
  position: absolute;
  background-color: var(--nav-bar);
  min-width: 160px;
  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
  z-index: 3;
  border: 4px solid var(--nav-bar);
}
.dropdown:hover .dropdown-content {
  display: flex;
  margin-block-start: 1em;
  margin-block-end: 1em;
  unicode-bidi: isolate;
  border-radius: 0.5rem;
  translate: -3% -0%;
}
.dropdown-content::before {
  content: "";
  position: absolute;
  top: -20px;
  left: 0;
  width: 100%;
  height: 20px;
  background: transparent;
}

.dropdown-content button:hover {
  background-color: var(--color-primary-hover);
  color: white;
  display: flex;
  flex-direction: column;
}
.dropdown .dropdown-content button {
  padding: 1em;
  font-size: 1rem;
  font-family: var(--main-font);
  border: none;
  border-radius: 0.5rem;
  border-width: 1px;
  background-color: transparent;
  color: var(--color-text);
}
.dropdown .dropdown-content button:hover {
  background-color: var(--color-primary-hover);
  color: var(--color-bg);
}
/*____________________________________________________________
Hero Section
______________________________________________________________*/
.hero {
  display: flex;
  justify-content: center;
  gap: clamp(1rem, 2vw, 5rem);
  padding: 100px;
}
.hero img {
  display: block;
  height: 350px;
  width: 350px;
  border-radius: 50%;
  object-fit: cover;
  object-position: center;
  flex-shrink: 0;
  transition: 1s ease;
}
.hero .img {
  position: relative;
}
.hero .img::before,
.hero .img::after {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  background: var(--primary-color);
  box-shadow: 0px 0px 75px -35px var(--primary-color);
  top: 50%;
  left: 50%;
  translate: -50% -50%;
  z-index: -1;
  padding: 2px;
  border-radius: 50%;
}
.hero img::before {
  filter: blur(0.5rem);
  opacity: 0.5;
}
.hero .info {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 30px;
}
.hero h1 {
  color: var(--color-text);
  font-family: var(--secondary-font);
  text-transform: capitalize;
  font-size: 44px;
  font-weight: 800;
}
.hero p {
  display: block;
  width: 350px;
  color: var(--color-text-accent);
  font-family: var(--secondary-font);
  font-size: 1.125rem;
  transition: 0.5s ease;
}
.hero button {
  background-color: var(--color-button);
  color: var(--color-text);
  font-family: var(--main-font);
  text-transform: capitalize;
  font-weight: 700;
  font-size: 16px;
  border-radius: 1rem;
  white-space: nowrap;
  height: 60px;
  width: 344px;
  border-color: none;
  position: relative;
  border-style: none;
  z-index: 1;
  transform-style: preserve-3d;
  transition: var(--transition);
}
@property --angle {
  syntax: "<angle>";
  initial-value: 0deg;
  inherits: false;
}
.hero button::after,
.hero button::before {
  content: "";
  position: absolute;
  background-image: conic-gradient(
    from var(--angle),
    var(--effect),
    var(--angle-transparency)
  );
  translate: -50% -50% -1px;
  top: 50%;
  left: 50%;
  width: calc(100% + 8px);
  height: calc(100% + 8px);
  border-radius: 1.1rem;
  z-index: -1;
  animation: 3s spin linear infinite;
  pointer-events: none;
}

.hero button::before {
  filter: blur(0.5rem);
  opacity: 0.5;
}

@keyframes spin {
  from {
    --angle: 0deg;
  }
  to {
    --angle: 360deg;
  }
}
.hero button:hover {
  background-color: var(--color-primary-hover);
  color: var(--color-bg);
}
.hero button:hover::after,
.hero button:hover::before {
  background-image: conic-gradient(
    from var(--angle),
    var(--effect),
    var(--angle-transparency-hover)
  );
}
/*____________________________________________________________
Section
______________________________________________________________*/
.container {
  padding: 0 0 50px;
  flex-grow: 1;
}
.container .section {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}
.container h2 {
  font-family: var(--main-font);
  color: var(--color-text-accent);
  font-weight: 300;
  font-size: 1.5rem;
  padding: 50px;
}
.container .section .card {
  width: 160px;
  height: 60px;
  font-family: var(--main-font);
  color: var(--color-text);
  background-color: var(--nav-bar);
  display: flex;
  align-items: center;
  justify-content: center;
  border: 2px;
  border-color: var(--nav-bar);
  border-radius: 10px;
  border-style: solid;
  position: relative;
}
.container .section .card p {
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
}
.container .section .card::after,
.container .section .card::before {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  background-image: var(--primary-color);
  top: 50%;
  left: 50%;
  translate: -50% -50%;
  z-index: -1;
  padding: 3px;
  border-radius: 10px;
}

.container .section svg {
  fill: url(#my-dynamic-gradient);
  stop-color: red;
  width: 50px;
  padding-left: 10px;
}

/*____________________________________________________________
Contact
______________________________________________________________*/
.contact {
  padding: 50px 0 90px 0px;
  display: flex;
  justify-content: center;
}
.contact .contact_info li {
  list-style: none;
}
.contact .contact_info a {
  text-decoration: none;
  font-family: var(--main-font);
  color: var(--color-text-accent);
  display: flex;
  flex-direction: row;
  font-size: 1.5rem;
}
.contact .contact_info a:hover {
  color: var(--color-text);
  transition: 1s;
}
/*____________________________________________________________
Footer
______________________________________________________________*/
footer {
  flex-shrink: 0;
  background-color: var(--nav-bar);
  margin: 0 85px 0 85px;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
  width: auto;
  height: 60px;
  display: flex;
  align-items: center;
  justify-content: space-around;
  z-index: 2;
}
footer p {
  font-family: var(--main-font);
  color: var(--color-text);
}
/*____________________________________________________________
Mobile Nav
______________________________________________________________*/
.nav .links.active {
  display: flex;
  position: fixed;
  top: 0;
  right: 0;
  height: 100vh;
  width: 50%;
  padding: 100px 20px;
  background-color: rgb(from var(--nav-bar) r g b / 0.95);
  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
  z-index: 9;
  flex-direction: column;
  justify-content: flex-start;
}
.nav .hamburger.active .bar:nth-child(2) {
  opacity: 0;
}
.nav .hamburger.active .bar:nth-child(1) {
  transform: translateY(8px) rotate(45deg);
}
.nav .hamburger.active .bar:nth-child(3) {
  transform: translateY(-8px) rotate(-45deg);
}

@media (max-width: 1200px) {
  .nav .links {
    display: none;
  }
  .nav {
    justify-content: space-between;
    padding: 30px;
  }
  .nav .hamburger {
    display: flex;
    z-index: 12;
  }
  .hero {
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: clamp(2rem, 2vw, 4rem);
    transition: 0.5s ease;
  }
  .container .section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: clamp(2rem, 2vw, 4rem);
  }
}

@media (max-width: 600px) {
  .nav .links.active {
    width: 100%;
  }
  .nav .links li a {
    font-size: 24px;
  }
}

